Fix squished platinum grenade next to post authors' usernames.

--- a/App/Theming/base.less
+++ b/App/Theming/base.less
@@ -122,10 +122,6 @@ header {
   font-size: 1.1em;
   font-weight: 500;
 
-  &:before {
-  	margin-right: .25em;
-  }
-
   .role-admin &:before {
     color: #990011;
   }
@@ -153,11 +149,11 @@ header {
 	.platinum &:before {
 		background-image: url('awful-resource://platinum-member.png');
 		content: "";
-		background-size: 12px 15px;
-		width: 12px;
-		height: 15px;
+		background-size: 20px;
+		width: 22px;
+		height: 20px;
 		display: inline-block;
-		vertical-align: middle;
+		vertical-align: top;
 	}
 
 	.coder &:before {
